fix empty scrollbar element appearing

--- a/mnmnwag/static/scss/zoom.scss
+++ b/mnmnwag/static/scss/zoom.scss
@@ -48,7 +48,7 @@
       font-size: 1rem !important;
       margin: 0 !important;
       // max-height: 5rem;
-      overflow-y: scroll;
+      overflow-y: auto;
     }
   }
   .next, .prev {
